Use type safe structures to configure the producer
Changes following review

Changes following review