@@ -19,7 +19,6 @@ package org.springframework.pulsar.core;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
@@ -29,14 +28,13 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Stream;
 
-import org.apache.pulsar.client.api.MessageRouter;
 import org.apache.pulsar.client.api.Producer;
 import org.apache.pulsar.client.api.PulsarClient;
 import org.apache.pulsar.client.api.PulsarClientException;
 import org.apache.pulsar.client.api.Schema;
-import org.apache.pulsar.client.api.interceptor.ProducerInterceptor;
 import org.apache.pulsar.client.impl.schema.StringSchema;
 import org.awaitility.Awaitility;
 import org.junit.jupiter.api.AfterEach;
@@ -60,6 +58,7 @@ import com.github.benmanes.caffeine.cache.Cache;
  *
  * @author Chris Bono
  * @author Alexander Preuß
+ * @author Christophe Bornet
  */
 class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 
@@ -80,9 +79,9 @@ class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 		PulsarProducerFactory<String> producerFactory = producerFactory(pulsarClient, Collections.emptyMap());
 		ProducerCacheKey<String> cacheKey = new ProducerCacheKey<>(schema, "topic1", null, null);
 
-		Producer<String> producer1 = producerFactory.createProducer("topic1", schema);
-		Producer<String> producer2 = producerFactory.createProducer("topic1", new StringSchema());
-		Producer<String> producer3 = producerFactory.createProducer("topic1", new StringSchema());
+		Producer<String> producer1 = producerFactory.createProducer(schema, "topic1");
+		Producer<String> producer2 = producerFactory.createProducer(new StringSchema(), "topic1");
+		Producer<String> producer3 = producerFactory.createProducer(new StringSchema(), "topic1");
 		assertThat(producer1).isSameAs(producer2).isSameAs(producer3);
 
 		Cache<ProducerCacheKey<String>, Producer<String>> producerCache = getAssertedProducerCache(producerFactory,
@@ -95,7 +94,7 @@ class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 	void cachedProducerIsCloseSafeProxy() throws PulsarClientException {
 		PulsarProducerFactory<String> producerFactory = producerFactory(pulsarClient, Collections.emptyMap());
 
-		Producer<String> proxyProducer = producerFactory.createProducer("topic1", schema);
+		Producer<String> proxyProducer = producerFactory.createProducer(schema, "topic1");
 		Producer<String> actualProducer = actualProducerFrom(proxyProducer);
 
 		assertThat(actualProducer.isConnected()).isTrue();
@@ -111,61 +110,61 @@ class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 		String topic2 = "topic2";
 		Schema<String> schema1 = new StringSchema();
 		Schema<String> schema2 = new StringSchema();
-		MessageRouter router1 = mock(MessageRouter.class);
-		MessageRouter router2 = mock(MessageRouter.class);
-		List<ProducerInterceptor> interceptors1 = List.of(mock(ProducerInterceptor.class));
-		List<ProducerInterceptor> interceptors2 = List.of(mock(ProducerInterceptor.class));
+		List<ProducerBuilderCustomizer<String>> customizers1 = List.of(p -> p.property("key", "value"));
+		List<ProducerBuilderCustomizer<String>> customizers2 = List.of(p -> p.property("key", "value"));
+		Set<String> encryptionKeys1 = Set.of("key1");
+		Set<String> encryptionKeys2 = Set.of("key2");
 
 		PulsarProducerFactory<String> producerFactory = producerFactory(pulsarClient, Collections.emptyMap());
 
 		// ask for the same 21 unique combos 3x - should end up w/ only 21 entries in
 		// cache
 		for (int i = 0; i < 3; i++) {
-			producerFactory.createProducer(topic1, schema1);
-			producerFactory.createProducer(topic1, schema1, router1);
-			producerFactory.createProducer(topic1, schema1, router2);
-			producerFactory.createProducer(topic1, schema1, router1, interceptors1);
-			producerFactory.createProducer(topic1, schema1, router1, interceptors2);
-			producerFactory.createProducer(topic1, schema1, router2, interceptors1);
-			producerFactory.createProducer(topic1, schema1, router2, interceptors2);
-			producerFactory.createProducer(topic1, schema2);
-			producerFactory.createProducer(topic1, schema2, router1);
-			producerFactory.createProducer(topic1, schema2, router2);
-			producerFactory.createProducer(topic1, schema2, router1, interceptors1);
-			producerFactory.createProducer(topic1, schema2, router1, interceptors2);
-			producerFactory.createProducer(topic1, schema2, router2, interceptors1);
-			producerFactory.createProducer(topic1, schema2, router2, interceptors2);
-			producerFactory.createProducer(topic2, schema1);
-			producerFactory.createProducer(topic2, schema1, router1);
-			producerFactory.createProducer(topic2, schema1, router2);
-			producerFactory.createProducer(topic2, schema1, router1, interceptors1);
-			producerFactory.createProducer(topic2, schema1, router1, interceptors2);
-			producerFactory.createProducer(topic2, schema1, router2, interceptors1);
-			producerFactory.createProducer(topic2, schema1, router2, interceptors2);
+			producerFactory.createProducer(schema1, topic1);
+			producerFactory.createProducer(schema1, topic1, encryptionKeys1, null);
+			producerFactory.createProducer(schema1, topic1, encryptionKeys2, null);
+			producerFactory.createProducer(schema1, topic1, encryptionKeys1, customizers1);
+			producerFactory.createProducer(schema1, topic1, encryptionKeys1, customizers2);
+			producerFactory.createProducer(schema1, topic1, encryptionKeys2, customizers1);
+			producerFactory.createProducer(schema1, topic1, encryptionKeys2, customizers2);
+			producerFactory.createProducer(schema2, topic1);
+			producerFactory.createProducer(schema2, topic1, encryptionKeys1, null);
+			producerFactory.createProducer(schema2, topic1, encryptionKeys2, null);
+			producerFactory.createProducer(schema2, topic1, encryptionKeys1, customizers1);
+			producerFactory.createProducer(schema2, topic1, encryptionKeys1, customizers2);
+			producerFactory.createProducer(schema2, topic1, encryptionKeys2, customizers1);
+			producerFactory.createProducer(schema2, topic1, encryptionKeys2, customizers2);
+			producerFactory.createProducer(schema1, topic2);
+			producerFactory.createProducer(schema1, topic2, encryptionKeys1, null);
+			producerFactory.createProducer(schema1, topic2, encryptionKeys2, null);
+			producerFactory.createProducer(schema1, topic2, encryptionKeys1, customizers1);
+			producerFactory.createProducer(schema1, topic2, encryptionKeys1, customizers2);
+			producerFactory.createProducer(schema1, topic2, encryptionKeys2, customizers1);
+			producerFactory.createProducer(schema1, topic2, encryptionKeys2, customizers2);
 		}
 
 		List<ProducerCacheKey<String>> expectedCacheKeys = new ArrayList<>();
 		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, null, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, router1, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, router1, interceptors1));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, router1, interceptors2));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, router2, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, router2, interceptors1));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, router2, interceptors2));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, encryptionKeys1, null));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, encryptionKeys1, customizers1));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, encryptionKeys1, customizers2));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, encryptionKeys2, null));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, encryptionKeys2, customizers1));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic1, encryptionKeys2, customizers2));
 		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, null, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, router1, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, router1, interceptors1));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, router1, interceptors2));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, router2, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, router2, interceptors1));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, router2, interceptors2));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, encryptionKeys1, null));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, encryptionKeys1, customizers1));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, encryptionKeys1, customizers2));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, encryptionKeys2, null));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, encryptionKeys2, customizers1));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema2, topic1, encryptionKeys2, customizers2));
 		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, null, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, router1, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, router1, interceptors1));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, router1, interceptors2));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, router2, null));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, router2, interceptors1));
-		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, router2, interceptors2));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, encryptionKeys1, null));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, encryptionKeys1, customizers1));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, encryptionKeys1, customizers2));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, encryptionKeys2, null));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, encryptionKeys2, customizers1));
+		expectedCacheKeys.add(new ProducerCacheKey<>(schema1, topic2, encryptionKeys2, customizers2));
 
 		getAssertedProducerCache(producerFactory, expectedCacheKeys);
 	}
@@ -176,8 +175,8 @@ class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 		ProducerCacheKey<String> cacheKey1 = new ProducerCacheKey<>(schema, "topic1", null, null);
 		ProducerCacheKey<String> cacheKey2 = new ProducerCacheKey<>(schema, "topic2", null, null);
 
-		Producer<String> actualProducer1 = actualProducerFrom(producerFactory.createProducer("topic1", schema));
-		Producer<String> actualProducer2 = actualProducerFrom(producerFactory.createProducer("topic2", schema));
+		Producer<String> actualProducer1 = actualProducerFrom(producerFactory.createProducer(schema, "topic1"));
+		Producer<String> actualProducer2 = actualProducerFrom(producerFactory.createProducer(schema, "topic2"));
 
 		Cache<ProducerCacheKey<String>, Producer<String>> producerCache = getAssertedProducerCache(producerFactory,
 				Arrays.asList(cacheKey1, cacheKey2));
@@ -195,7 +194,7 @@ class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 				Collections.emptyMap(), Duration.ofSeconds(3L), 10L, 2);
 		ProducerCacheKey<String> cacheKey = new ProducerCacheKey<>(schema, "topic1", null, null);
 
-		Producer<String> actualProducer = actualProducerFrom(producerFactory.createProducer("topic1", schema));
+		Producer<String> actualProducer = actualProducerFrom(producerFactory.createProducer(schema, "topic1"));
 
 		Cache<ProducerCacheKey<String>, Producer<String>> producerCache = getAssertedProducerCache(producerFactory,
 				Collections.singletonList(cacheKey));
@@ -210,16 +209,16 @@ class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 		pulsarClient = spy(pulsarClient);
 		when(this.pulsarClient.newProducer(schema)).thenThrow(new RuntimeException("5150"));
 		PulsarProducerFactory<String> producerFactory = producerFactory(pulsarClient, Collections.emptyMap());
-		assertThatThrownBy(() -> producerFactory.createProducer("topic1", schema)).isInstanceOf(RuntimeException.class)
+		assertThatThrownBy(() -> producerFactory.createProducer(schema, "topic1")).isInstanceOf(RuntimeException.class)
 				.hasMessage("5150");
 		getAssertedProducerCache(producerFactory, Collections.emptyList());
 	}
 
 	@Override
-	protected void assertProducerHasTopicSchemaAndRouter(Producer<String> producer, String topic, Schema<String> schema,
-			MessageRouter router, List<ProducerInterceptor> producerInterceptors) {
-		super.assertProducerHasTopicSchemaAndRouter(actualProducerFrom(producer), topic, schema, router,
-				producerInterceptors);
+	protected void assertProducerHasTopicSchemaAndEncryptionKeys(Producer<String> producer, String topic,
+			Schema<String> schema, Set<String> encryptionKeys) {
+		super.assertProducerHasTopicSchemaAndEncryptionKeys(actualProducerFrom(producer), topic, schema,
+				encryptionKeys);
 	}
 
 	@SuppressWarnings("unchecked")
@@ -278,50 +277,56 @@ class CachingPulsarProducerFactoryTests extends PulsarProducerFactoryTests {
 		}
 
 		static Stream<Arguments> equalsAndHashCodeTestProvider() {
-			MessageRouter router1 = mock(MessageRouter.class);
-			List<ProducerInterceptor> interceptors1 = Collections.singletonList(mock(ProducerInterceptor.class));
-			ProducerCacheKey<String> key1 = new ProducerCacheKey<>(Schema.STRING, "topic1", router1, interceptors1);
-			return Stream.of(arguments(Named.of("differentClass", key1), "someStrangeObject", false),
-					arguments(Named.of("null", key1), null, false),
-					arguments(Named.of("sameInstance", key1), key1, true),
-					arguments(
-							Named.of("sameSchemaSameTopicSameNullRouterSameNullInterceptors",
+			Set<String> encryptionKeys1 = Set.of("key1");
+			List<ProducerBuilderCustomizer<String>> customizers1 = List.of(p -> p.property("key", "value"));
+			ProducerCacheKey<String> key1 = new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1,
+					customizers1);
+			return Stream
+					.of(arguments(Named.of("differentClass", key1), "someStrangeObject", false),
+							arguments(Named.of("null", key1), null, false),
+							arguments(Named.of("sameInstance", key1), key1, true),
+							arguments(Named.of("sameSchemaSameTopicSameNullEncryptionKeysSameNullCustomizers",
 									new ProducerCacheKey<>(Schema.STRING, "topic1", null, null)),
-							new ProducerCacheKey<>(Schema.STRING, "topic1", null, null), true),
-					arguments(
-							Named.of("sameSchemaSameTopicSameNonNullRouterSameNullInterceptors",
-									new ProducerCacheKey<>(Schema.STRING, "topic1", router1, null)),
-							new ProducerCacheKey<>(Schema.STRING, "topic1", router1, null), true),
-					arguments(
-							Named.of("differentSchemaInstanceSameSchemaType",
-									new ProducerCacheKey<>(new StringSchema(), "topic1", router1, null)),
-							new ProducerCacheKey<>(new StringSchema(), "topic1", router1, null), true),
-					arguments(
-							Named.of("differentSchemaType",
-									new ProducerCacheKey<>(Schema.STRING, "topic1", router1, interceptors1)),
-							new ProducerCacheKey<>(Schema.INT64, "topic1", router1, interceptors1), false),
-					arguments(
-							Named.of("differentTopic",
-									new ProducerCacheKey<>(Schema.STRING, "topic1", router1, interceptors1)),
-							new ProducerCacheKey<>(Schema.STRING, "topic2", router1, interceptors1), false),
-					arguments(
-							Named.of("differentNonNullRouter",
-									new ProducerCacheKey<>(Schema.STRING, "topic1", router1, null)),
-							new ProducerCacheKey<>(Schema.STRING, "topic1", mock(MessageRouter.class), null), false),
-					arguments(
-							Named.of("differentNullRouter",
-									new ProducerCacheKey<>(Schema.STRING, "topic1", router1, null)),
-							new ProducerCacheKey<>(Schema.STRING, "topic1", null, null), false),
-					arguments(
-							Named.of("differentNonNullInterceptors",
-									new ProducerCacheKey<>(Schema.STRING, "topic1", router1, interceptors1)),
-							new ProducerCacheKey<>(Schema.STRING, "topic1", router1,
-									Collections.singletonList(mock(ProducerInterceptor.class))),
-							false),
-					arguments(
-							Named.of("differentNullInterceptor",
-									new ProducerCacheKey<>(Schema.STRING, "topic1", router1, interceptors1)),
-							new ProducerCacheKey<>(Schema.STRING, "topic1", null, null), false));
+									new ProducerCacheKey<>(Schema.STRING, "topic1", null, null), true),
+							arguments(
+									Named.of("sameSchemaSameTopicSameNonNullEncryptionKeysSameNullCustomizers",
+											new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1, null)),
+									new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1, null), true),
+							arguments(
+									Named.of("differentSchemaInstanceSameSchemaType",
+											new ProducerCacheKey<>(new StringSchema(), "topic1", encryptionKeys1,
+													null)),
+									new ProducerCacheKey<>(new StringSchema(), "topic1", encryptionKeys1, null), true),
+							arguments(
+									Named.of("differentSchemaType",
+											new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1, null)),
+									new ProducerCacheKey<>(Schema.INT64, "topic1", encryptionKeys1, null), false),
+							arguments(
+									Named.of("differentTopic",
+											new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1,
+													customizers1)),
+									new ProducerCacheKey<>(Schema.STRING, "topic2", encryptionKeys1, customizers1),
+									false),
+							arguments(
+									Named.of("differentNonNullEncryptionKeys",
+											new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1, null)),
+									new ProducerCacheKey<>(Schema.STRING, "topic1", Set.of("key2"), null), false),
+							arguments(
+									Named.of("differentNullEncryptionKeys",
+											new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1, null)),
+									new ProducerCacheKey<>(Schema.STRING, "topic1", null, null), false),
+							arguments(
+									Named.of("differentNonNullCustomizers",
+											new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1,
+													customizers1)),
+									new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1,
+											List.of(p -> p.property("key", "value"))),
+									false),
+							arguments(
+									Named.of("differentNullInterceptor",
+											new ProducerCacheKey<>(Schema.STRING, "topic1", encryptionKeys1,
+													customizers1)),
+									new ProducerCacheKey<>(Schema.STRING, "topic1", null, null), false));
 		}
 
 	}
